office-kubernetes/kustomize/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  labels:
    app: glance
spec:
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  selector:
    app: glance
