office-kubernetes/kustomize/glance/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
spec:
  parentRefs:
  - name: web
    namespace: gateway-system
  hostnames:
    - "glance.k8s.local-k8s.tech"
  rules:
    - backendRefs:
      - name: glance
        port: 80
